Added Spell Caster Game.

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         }
 
                         document.addEventListener('DOMContentLoaded', function () {
-                            
+
 
                             let tempArray = [];
                             //WE CAN DYNAMICALLY RENDER THIS JSON BUT HAVE TO WORK ON API 
@@ -540,6 +540,7 @@
 
 
 
+                    <!-- <NO-TEST> NO TESTING ALLOWED IN THESE GROUNDS -->
 
 
 
@@ -1336,6 +1337,33 @@
                             </a>
                         </div>
                     </div>
+
+
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div class="card-wrapper text-center">
+                            <a class="card-route" target="_blank" href="pens/SpellCaster/index.html">
+                                <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
+                                <h4 class="card-text">Spell Caster Game</h4>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/SpellCaster/index.html">Demo</a>
+                                </div>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Download"
+                                        href="zipper-files/SpellCaster.zip" download="SpellCaster.zip">Download Zip</a>
+                                </div>
+                                <div class="text-center mt-3 mb-2" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/ste-vg">Visit Creator</a>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+
+
+
+                    <!-- </NO-TEST> NO TESTING ALLOWED IN THESE GROUNDS -->
 
                     <div class="col-md-12 col-sm-12 col-lg-12 ">
                         <br>
