Added Glide To Reveal

--- a/index.html
+++ b/index.html
@@ -1210,7 +1210,7 @@
                         <div class="card-wrapper text-center">
                             <a class="card-route" target="_blank" href="pens/Snowjob/Snowjob.zip">
                                 <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
-                                <h4 class="card-text">Snow Job</h4>
+                                <h4 class="card-text">Snow Fall Only Linux</h4>
                                 <div class="text-center mt-3" data-tilt>
                                     <a class="inner-route" target="_blank" aria-label="Demo"
                                         href="pens/Snowjob/Snowjob.zip">Demo</a>
@@ -1360,6 +1360,26 @@
                         </div>
                     </div>
 
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div class="card-wrapper text-center">
+                            <a class="card-route" target="_blank" href="pens/GlideToReveal/index.html">
+                                <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
+                                <h4 class="card-text">Glide To Reveal</h4>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/GlideToReveal/index.html">Demo</a>
+                                </div>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Download"
+                                        href="zipper-files/GlideToReveal.zip" download="GlideToReveal.zip">Download Zip</a>
+                                </div>
+                                <div class="text-center mt-3 mb-2" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/jh3y">Visit Creator</a>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
 
 
 
