--- a/index.html
+++ b/index.html
@@ -533,9 +533,15 @@
 
 
 
-
-
-
+                    <!-- 
+    |\      |  |------|        ------|------ |------  |-------  ------|------ -------  |\      |  |--------                                   
+    | \     |  |      |              |       |        |               |          |     | \     |  |                  
+    |  \    |  |      |              |       |        |               |          |     |  \    |  |                   
+    |   \   |  |      |   ----       |       |------  |------|        |          |     |   \   |  |   |---|                            
+    |    \  |  |      |              |       |               |        |          |     |    \  |  |   |   |              
+    |     \ |  |      |              |       |               |        |          |     |     \ |  |       |            
+    |      \|  |------|              |       |------  -------|        |       -------  |      \|  |-------|                              
+ -->
 
 
 
@@ -1371,7 +1377,8 @@
                                 </div>
                                 <div class="text-center mt-3" data-tilt>
                                     <a class="inner-route" target="_blank" aria-label="Download"
-                                        href="zipper-files/GlideToReveal.zip" download="GlideToReveal.zip">Download Zip</a>
+                                        href="zipper-files/GlideToReveal.zip" download="GlideToReveal.zip">Download
+                                        Zip</a>
                                 </div>
                                 <div class="text-center mt-3 mb-2" data-tilt>
                                     <a class="inner-route2" target="_blank" aria-label="Created By"
@@ -1381,7 +1388,27 @@
                         </div>
                     </div>
 
-
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div class="card-wrapper text-center">
+                            <a class="card-route" target="_blank" href="pens/EtchedClock/index.html">
+                                <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
+                                <h4 class="card-text">Etched Clock</h4>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/EtchedClock/index.html">Demo</a>
+                                </div>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Download"
+                                        href="zipper-files/EtchedClock.zip" download="EtchedClock.zip">Download
+                                        Zip</a>
+                                </div>
+                                <div class="text-center mt-3 mb-2" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/jkantner">Visit Creator</a>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
 
                     <!-- </NO-TEST> NO TESTING ALLOWED IN THESE GROUNDS -->
 
