--- a/index.html
+++ b/index.html
@@ -1451,26 +1451,18 @@
         const analytics = getAnalytics(app);
       </script>
 
-
-<!-- 
-    You can deploy now or later. To deploy now, open a terminal window, then navigate to or create a root directory for your web app.
-
-Sign in to Google
-firebase login
-Initiate your project
-Run this command from your app's root directory:
-
-firebase init
-When you're ready, deploy your web app
-Put your static files (e.g., HTML, CSS, JS) in your app's deploy directory (the default is "public"). Then, run this command from your app's root directory:
-
-firebase deploy
-After deploying, view your app at projectpen-3e422.web.app
-
-Need help? Check out the Hosting docs
-
-
- -->
+<!-- Google Analytics -->
+<script src="analytics.js"></script>
+<!-- <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    
+    ga('create', 'UA-XXXXX-Y', 'auto');
+    ga('send', 'pageview');
+    </script> -->
+    <!-- End Google Analytics -->
 
     <script src="assets/js/animation.js"></script>
     <script src="assets/js/jquery-1.12.4.min.js"></script>
