--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-436664993"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-436664993"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
     
       gtag('config', 'G-436664993');
-    </script>
+    </script> -->
     <!-- <script src="analytics.js"></script> -->
 <!-- <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
