--- a/public/index.html
+++ b/public/index.html
@@ -1445,6 +1445,30 @@
                         </div>
                     </div>
 
+
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div class="card-wrapper text-center">
+                            <a class="card-route" target="_blank" href="pens/PaddleGameJS/index.html">
+                                <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
+                                <h4 class="card-text">Paddle Game JS</h4>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/PaddleGameJS/index.html">Demo</a>
+                                </div>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Download"
+                                        href="zipper-files/PaddleGameJS.zip" download="PaddleGameJS.zip">Download
+                                        Zip</a>
+                                </div>
+                                <div class="text-center mt-3 mb-2" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://github.com/umair-ali-bhutto/PaddleGameJs">Visit Creator</a>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    
                     <!-- </NO-TEST> NO TESTING ALLOWED IN THESE GROUNDS ABOVE -->
 
 
