Added Some Links To Pens

--- a/index.html
+++ b/index.html
@@ -1859,9 +1859,27 @@
                             <li><a href="https://codepen.io/Pedro-Ondiviela/pen/JjqKWNp">Ducky Fog - Puzzle game</a></li>
                             <li><a href="https://codepen.io/simeydotme/pen/pomRJeE">Gooey SVG Filter Button</a></li>
                             
+                            <li><a href="https://codepen.io/cathydutton/pen/JjpxMm">JavaScript Hangman game</a></li>
+                            <li><a href="https://codepen.io/CaioPaiola/pen/nojJmQ">Snake Game</a></li>
+                            <li><a href="https://codepen.io/dissimulate/pen/AGYEby">Platform game engine</a></li>
+                            <li><a href="https://codepen.io/HunorMarton/pen/MWjBRWp">Stack game with Three.js and Cannon.js</a></li>
+                            <li><a href="https://codepen.io/HunorMarton/pen/VwKwgxX">Tilting Maze game</a></li>
+                            <li><a href="https://codepen.io/elad2412/pen/DBeNNZ">PURE CSS GAME - NO JS</a></li>
+                            <li><a href="https://codepen.io/jak_e/pen/JjRGQPY">Cheap AI Chess!</a></li>
+                            <li><a href="https://codepen.io/una/pen/NxZaNr">Pure CSS (Sass) Carnival Game</a></li>
+                            <li><a href="https://codepen.io/dazulu/pen/rQQpgY">Dinosaur Memory Game🦖</a></li>
+                            <li><a href="https://codepen.io/jfledd/pen/ExwGqrz">WordlePractice</a></li>
+                            <li><a href="https://codepen.io/desandro/pen/ezNawy">Cub n Pup - puzzle game demo</a></li>
+                            <li><a href="https://codepen.io/gdube/pen/JybxxZ">Pong game with JavaScript</a></li>
+                            <li><a href="https://codepen.io/tusharbandal/pen/AmYbQq">Tic Tac Toe game</a></li>
+                            <li><a href="https://codepen.io/chaofix/pen/VrWZga">Maze (Grid) - Pure CSS Game - No JS</a></li>
+                            <li><a href="https://codepen.io/jackrugile/pen/bGRWbK">Snake Game - CSS Renderer</a></li>
+                            <li><a href="https://codepen.io/SYNTAG/pen/powrVQE">LOL Copypasta</a></li>
+                            <li><a href="https://codepen.io/nealagarwal/pen/QpOqQG">How Fast Can You Scroll?</a></li>
+                            <li><a href="https://codepen.io/natewiley/pen/BawOqL">Memory Game</a></li>
 
 
-
+                        
                         </ol>
 
                         <h3>YOUTUBE CODE</h3>
