--- a/public/index.html
+++ b/public/index.html
@@ -1877,9 +1877,10 @@
                             <li><a href="https://codepen.io/SYNTAG/pen/powrVQE">LOL Copypasta</a></li>
                             <li><a href="https://codepen.io/nealagarwal/pen/QpOqQG">How Fast Can You Scroll?</a></li>
                             <li><a href="https://codepen.io/natewiley/pen/BawOqL">Memory Game</a></li>
+                            <li><a href="https://codepen.io/jkantner/pen/GRdNVKw">Generative Tree Animation</a></li>
 
 
-                        
+                            
                         </ol>
 
                         <h3>YOUTUBE CODE</h3>
