--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,9 @@
     <!-- The <meta name="msapplication-TileImage"> meta tag is used to specify the path to the image file that will be used as the tile icon on the Windows Start screen when a user pins a website to the Start menu in Internet Explorer and Microsoft Edge. This tag is specific to Microsoft browsers. -->
     <meta name="msapplication-TileImage" content="https://umair-ali-bhutto.github.io/assets/CodePenIcon/logo.png" />
 
+    <meta http-equiv="Cache-Control" content="public, max-age=31536000">
+    <meta http-equiv="Expires" content="Tue, 29 Feb 2028 23:59:00 GMT">
+
 
 
     <title>Project Pen</title>
