--- a/index.html
+++ b/index.html
@@ -38,12 +38,29 @@
 
     <meta name="google-site-verification" content="ZL9qKY_hMr-di-_PzXCRsvHIQ-ddQ1lpNwZvXVIvrb4" />
     <!-- META Tags -->
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description"
         content="Explore a collection of inspiring CodePens from talented creators! My webpage showcases a variety of interactive demos contributed by different authors on CodePen. Click through to experience the creativity and skill of each developer. Don't forget to visit their CodePen profiles for more amazing work. #CodePen #WebDevelopment #InteractiveDesign. This website is developed by Umair Ali Bhutto" />
     <meta name="author" content="Umair Ali Bhutto">
     <meta property="article:author" content="Umair Ali Bhutto">
+    <meta name="copyright" content="© 2024 Umair Ali Bhutto (Just Kidding No Copy Right From Me Is Possible Because Code Is Copied From Others)">
+    <meta name="publisher" content="Umair Ali Bhutto">
+
+    <meta name="rating" content="General">
+    <meta name="distribution" content="Global">
+    <meta name="subject" content="Example subject">
+    <meta name="language" content="English">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta name="HandheldFriendly" content="true">
+
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Cache-Control" content="no-cache">
+    <meta http-equiv="Pragma" content="no-cache">
+
+
 
     <!-- OPENGRAPH -->
     <meta property="og:title" content="✨ Discover the Power of Pens! 🚀">
@@ -52,12 +69,23 @@
     <meta property="og:image" content="https://umair-ali-bhutto.github.io/assets/CodePenIcon/logo.png">
     <meta name="og:type" content="website" />
     <meta property="og:site_name" content="Project Pen">
+    <meta property="og:type" content="coding">
+    <meta property="og:url" content="https://umair-ali-bhutto.github.io/codepen/">
+
+
 
     <!-- TWITTER AND OTHER -->
     <meta name="twitter:title" content="✨ Discover the Power of Pens! 🚀">
     <meta name="twitter:description"
         content="🔥 Unleash the potential of CodePen. Explore a collection of inspiring CodePens from talented creators! #CodePen 💻">
     <meta name="twitter:image" content="https://umair-ali-bhutto.github.io/assets/CodePenIcon/logo.png">
+
+    <!-- 
+        <meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@site_account">
+
+     -->
+
 
     <!-- <meta name="keywords"
         content="CodePen, HTML, CSS, JavaScript, Web Development, Umair Ali, Interactive Demos, Creative Coding, Collections, Authors, DawidKrajewski, Alencoder_75, arturs, ania221b, argyleink, chasekaiser, Codepixl, cassidoo, coding, dobro123, Dillo, ecemgo, himalayasingh, jkantner, jessejburton, mallendeo, neilcarpenter, Profesor08, petebarr, rabinlc, robinselmer, Skagoo, sandil, YusukeNakaya, "> -->
@@ -75,8 +103,7 @@
     <!-- The <meta name="msapplication-TileImage"> meta tag is used to specify the path to the image file that will be used as the tile icon on the Windows Start screen when a user pins a website to the Start menu in Internet Explorer and Microsoft Edge. This tag is specific to Microsoft browsers. -->
     <meta name="msapplication-TileImage" content="https://umair-ali-bhutto.github.io/assets/CodePenIcon/logo.png" />
 
-    <meta http-equiv="Cache-Control" content="public, max-age=31536000">
-    <meta http-equiv="Expires" content="Tue, 29 Feb 2028 23:59:00 GMT">
+
 
 
 
