Added Some More Pens :--)

--- a/index.html
+++ b/index.html
@@ -1908,8 +1908,11 @@
                             <li><a href="https://codepen.io/nealagarwal/pen/QpOqQG">How Fast Can You Scroll?</a></li>
                             <li><a href="https://codepen.io/natewiley/pen/BawOqL">Memory Game</a></li>
                             <li><a href="https://codepen.io/jkantner/pen/GRdNVKw">Generative Tree Animation</a></li>
+                            <li><a href="https://codepen.io/atzedent/pen/PovvpvR">It Is All Just a Reflection</a></li>
+                            <li><a href="https://codepen.io/jdillon/pen/pomKgRZ">Animated gradient buttons with GSAP and tsParticles</a></li>
+                            <li><a href="https://codepen.io/daniel-mu-oz/pen/pomLRzW">Mask animation css</a></li>
 
-
+                            
                             
                         </ol>
 
