--- a/index.html
+++ b/index.html
@@ -1911,9 +1911,12 @@
                             <li><a href="https://codepen.io/atzedent/pen/PovvpvR">It Is All Just a Reflection</a></li>
                             <li><a href="https://codepen.io/jdillon/pen/pomKgRZ">Animated gradient buttons with GSAP and tsParticles</a></li>
                             <li><a href="https://codepen.io/daniel-mu-oz/pen/pomLRzW">Mask animation css</a></li>
+                            <li><a href="https://codepen.io/kitjenson/pen/oNrgGjm">CPC-Maze / Speedy McMousy / 26 Levels</a></li>
+                            <li><a href="https://codepen.io/vainsan/pen/zYVYJrw">three.js Maze Challenge</a></li>
+                            <li><a href="https://codepen.io/NiklasKnaack/pen/QWRMOrb">Anxious dots: 250 followers special</a></li>
 
                             
-                            
+                            <li><a href=""></a></li>
                         </ol>
 
                         <h3>YOUTUBE CODE</h3>
