--- a/public/index.html
+++ b/public/index.html
@@ -1914,6 +1914,9 @@
                             <li><a href="https://codepen.io/kitjenson/pen/oNrgGjm">CPC-Maze / Speedy McMousy / 26 Levels</a></li>
                             <li><a href="https://codepen.io/vainsan/pen/zYVYJrw">three.js Maze Challenge</a></li>
                             <li><a href="https://codepen.io/NiklasKnaack/pen/QWRMOrb">Anxious dots: 250 followers special</a></li>
+                            <li><a href="https://codepen.io/mog13/pen/qBOEaZP">Warning bar</a></li>
+                            <li><a href="https://codepen.io/jkantner/pen/XWzePgp">Lotsa Notifications</a></li>
+                            <li><a href="https://codepen.io/TheMOZZARELLA/pen/QWPbdNY">Hi-Tech Notification Button</a></li>
 
                             
                             <li><a href=""></a></li>
