--- a/public/index.html
+++ b/public/index.html
@@ -1917,6 +1917,7 @@
                             <li><a href="https://codepen.io/mog13/pen/qBOEaZP">Warning bar</a></li>
                             <li><a href="https://codepen.io/jkantner/pen/XWzePgp">Lotsa Notifications</a></li>
                             <li><a href="https://codepen.io/TheMOZZARELLA/pen/QWPbdNY">Hi-Tech Notification Button</a></li>
+                            <li><a href="https://codepen.io/zimjs/pen/dyBYbMq">Ring Maze for the CodePen Challenge with ZIM TextureActive for three.js</a></li>
 
                             
                             <li><a href=""></a></li>
