--- a/public/index.html
+++ b/public/index.html
@@ -1918,6 +1918,11 @@
                             <li><a href="https://codepen.io/jkantner/pen/XWzePgp">Lotsa Notifications</a></li>
                             <li><a href="https://codepen.io/TheMOZZARELLA/pen/QWPbdNY">Hi-Tech Notification Button</a></li>
                             <li><a href="https://codepen.io/zimjs/pen/dyBYbMq">Ring Maze for the CodePen Challenge with ZIM TextureActive for three.js</a></li>
+                            <li><a href="https://codepen.io/tsuhre/pen/WNqxevY">PatternXOR Game</a></li>
+                            <li><a href="https://codepen.io/catSun/pen/ExBygjO">Loading bar</a></li>
+                            <li><a href="https://codepen.io/prisoner849/pen/OJeXVad">Colorized faces of instances</a></li>
+                            <li><a href="https://codepen.io/ghaste/pen/zYVqBwj">Newton's balls ring loader</a></li>
+                            <li><a href="https://codepen.io/josetxu/pen/BaeVNqe">Pill Loader - CSS</a></li>
 
                             
                             <li><a href=""></a></li>
