Added Some Pens

--- a/index.html
+++ b/index.html
@@ -1923,6 +1923,12 @@
                             <li><a href="https://codepen.io/prisoner849/pen/OJeXVad">Colorized faces of instances</a></li>
                             <li><a href="https://codepen.io/ghaste/pen/zYVqBwj">Newton's balls ring loader</a></li>
                             <li><a href="https://codepen.io/josetxu/pen/BaeVNqe">Pill Loader - CSS</a></li>
+                            <li><a href="https://codepen.io/ksenia-k/pen/xxoqXbJ">Rube Goldberg HTML form</a></li>
+                            <li><a href="https://codepen.io/alexandrevacassin/pen/XWLNdQJ">Logo Rebuild</a></li>
+                            <li><a href="https://codepen.io/tommyho/pen/PorzmrV">CPChallenge - Geometric Puzzles Retro Tetris Simulator</a></li>
+                            <li><a href="https://codepen.io/MyraOphelia/pen/JjQbYVL">The Puzzles</a></li>
+                            <li><a href="https://codepen.io/atzedent/pen/XWLjywe">Perspective</a></li>
+                            <li><a href="https://codepen.io/jh3y/pen/oNrBPEP">CSS Matrix Board w/ clip-path && mask</a></li>
 
                             
                             <li><a href=""></a></li>
