--- a/public/index.html
+++ b/public/index.html
@@ -1929,6 +1929,7 @@
                             <li><a href="https://codepen.io/MyraOphelia/pen/JjQbYVL">The Puzzles</a></li>
                             <li><a href="https://codepen.io/atzedent/pen/XWLjywe">Perspective</a></li>
                             <li><a href="https://codepen.io/jh3y/pen/oNrBPEP">CSS Matrix Board w/ clip-path && mask</a></li>
+                            <li><a href="https://codepen.io/pavlovsk/pen/zYXBEeR">Convergence</a></li>
 
                             
                             <li><a href=""></a></li>
