--- a/index.html
+++ b/index.html
@@ -1935,6 +1935,8 @@
                             <li><a href="https://codepen.io/RAFA3L/pen/WNqdRmw">Behind The Fold</a></li>
                             <li><a href="https://codepen.io/josetxu/pen/WNqpWem">Van Gogh - Van Goghing - Van Gone | CSS + IMG</a></li>
                             <li><a href="https://codepen.io/nonsalant/pen/jOjwvMX">Ephemeral tic tac toe ❌⭕</a></li>
+                            <li><a href="https://codepen.io/grantjenkins/pen/NWZzEVL">Critter Cannon (Game)</a></li>
+                            <li><a href="https://codepen.io/argyleink/pen/VwNMLQN">IO - Scroll Drive All The Things</a></li>
 
                             
                             <li><a href=""></a></li>
