Added One Link For Pen

--- a/index.html
+++ b/index.html
@@ -1937,6 +1937,7 @@
                             <li><a href="https://codepen.io/nonsalant/pen/jOjwvMX">Ephemeral tic tac toe ❌⭕</a></li>
                             <li><a href="https://codepen.io/grantjenkins/pen/NWZzEVL">Critter Cannon (Game)</a></li>
                             <li><a href="https://codepen.io/argyleink/pen/VwNMLQN">IO - Scroll Drive All The Things</a></li>
+                            <li><a href="https://codepen.io/jscottsmith/pen/VLzMLo">Colorful Console Logs</a></li>
 
                             
                             <li><a href=""></a></li>
