--- a/public/index.html
+++ b/public/index.html
@@ -1938,6 +1938,9 @@
                             <li><a href="https://codepen.io/grantjenkins/pen/NWZzEVL">Critter Cannon (Game)</a></li>
                             <li><a href="https://codepen.io/argyleink/pen/VwNMLQN">IO - Scroll Drive All The Things</a></li>
                             <li><a href="https://codepen.io/jscottsmith/pen/VLzMLo">Colorful Console Logs</a></li>
+                            <li><a href="https://codepen.io/alexandrevacassin/pen/rNgzOXY">Scroll to the Abyss</a></li>
+                            <li><a href="https://codepen.io/ecemgo/pen/ZEPYNXJ">Cube Effect Slider | Swiper JS and tsParticles</a></li>
+                            <li><a href="https://codepen.io/jh3y/full/JjVRGwR">Scroll Driven Portal Layout</a></li>
 
                             
                             <li><a href=""></a></li>
