Added some more pens

--- a/index.html
+++ b/index.html
@@ -1941,6 +1941,11 @@
                             <li><a href="https://codepen.io/alexandrevacassin/pen/rNgzOXY">Scroll to the Abyss</a></li>
                             <li><a href="https://codepen.io/ecemgo/pen/ZEPYNXJ">Cube Effect Slider | Swiper JS and tsParticles</a></li>
                             <li><a href="https://codepen.io/jh3y/full/JjVRGwR">Scroll Driven Portal Layout</a></li>
+                            <li><a href="https://codepen.io/cbolson/pen/GRbzyGJ">Slanted grid gallery</a></li>
+                            <li><a href="https://codepen.io/wakana-k/pen/oNrVwjY">Sea Glass Clock</a></li>
+                            <li><a href="https://codepen.io/creativeocean/pen/WNqWmPP">A beautiful mess (v2b)</a></li>
+                            <li><a href="https://codepen.io/Ma5a/pen/rNERVMQ">window scroll monkey</a></li>
+                            <li><a href="https://codepen.io/evilpaper/pen/dyyZjLQ">Keyboard Hero</a></li>
 
                             
                             <li><a href=""></a></li>
