--- a/index.html
+++ b/index.html
@@ -1946,6 +1946,10 @@
                             <li><a href="https://codepen.io/creativeocean/pen/WNqWmPP">A beautiful mess (v2b)</a></li>
                             <li><a href="https://codepen.io/Ma5a/pen/rNERVMQ">window scroll monkey</a></li>
                             <li><a href="https://codepen.io/evilpaper/pen/dyyZjLQ">Keyboard Hero</a></li>
+                            <li><a href="https://codepen.io/ivorjetski/pen/jOgEyPO">CSS Music Video - No Images - Pure Code.</a></li>
+                            <li><a href="https://codepen.io/Ma5a/pen/zYgrqrL">hug sad bunnies</a></li>
+                            <li><a href="https://codepen.io/marcobiedermann/pen/ExqKeoW">Alternatives to Using Pure Black</a></li>
+                            <li><a href="https://codepen.io/MenSeb/pen/RwXrpOz">Kosmos Eye</a></li>
 
                             
                             <li><a href=""></a></li>
