--- a/index.html
+++ b/index.html
@@ -1950,6 +1950,8 @@
                             <li><a href="https://codepen.io/Ma5a/pen/zYgrqrL">hug sad bunnies</a></li>
                             <li><a href="https://codepen.io/marcobiedermann/pen/ExqKeoW">Alternatives to Using Pure Black</a></li>
                             <li><a href="https://codepen.io/MenSeb/pen/RwXrpOz">Kosmos Eye</a></li>
+                            <li><a href="https://codepen.io/strangerintheq/pen/poMwpvy">thing</a></li>
+                            <li><a href="https://codepen.io/Ma5a/pen/ExqWGGM">range slider hamster</a></li>
 
                             
                             <li><a href=""></a></li>
